--- a/openseats/static/css/group.css
+++ b/openseats/static/css/group.css
@@ -12,3 +12,12 @@ main, main > .group-container {
 body {
   font-family: 'Noto Sans KR', sans-serif;
 }
+
+.a {
+  text-decoration: none;
+  color: black;
+}
+
+a:hover {
+  color: dodgerblue;
+}
