--- a/openseats/templates/basic/header.html
+++ b/openseats/templates/basic/header.html
@@ -36,7 +36,10 @@
           {% else %}
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" id="group" aria-current="page" href="#">about</a>
+              <a class="nav-link active" id="group" aria-current="page" href="{{url_for('group.main_page')}}">Group</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" id="group" aria-current="page" href="#">About</a>
             </li>
           </ul>
           <li class="nav-item" style="list-style: none">
