--- a/openseats/templates/group/group_detail.html
+++ b/openseats/templates/group/group_detail.html
@@ -64,6 +64,52 @@
 }
 </style>
 
+<!-- Modal (가입 팝업창) -->
+<!-- <div class="modal modal-dialog modal-dialog-centered fade " id="myModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h1 class="modal-title fs-5" id="exampleModalLabel">Modal title</h1>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        ...
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary">Save changes</button>
+      </div>
+    </div>
+  </div>
+</div> -->
+
+<div class="modal fade" id="myModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h1 class="modal-title fs-5" id="exampleModalLabel">가입신청</h1>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <form>
+           <div class="form-group">
+            <label for="recipient-name" class="col-form-label">제목:</label>
+            <input type="text" class="form-control" id="recipient-name">
+          </div>
+          <div class="mb-3">
+            <label for="message-text" class="col-form-label">가입신청 메세지:</label>
+            <textarea class="form-control" id="message-text" style="height: 100px;"></textarea>
+          </div>
+        </form>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">닫기</button>
+        <button type="button" class="btn btn-primary">가입신청</button>
+      </div>
+    </div>
+  </div>
+</div>
+
 <div class="container group-container">
   <div class="row">
     {%  include 'basic/flash.html' %}
@@ -174,7 +220,7 @@
                     {% for i in range(0, group.reservation|length) %}
                       <li class="list-group-item d-flex my-1">
                         <img src="{{ url_for('feature.get_profile_image', user_id=group.reservation[i].user.id) }}" class="rounded-circle d-block mb-3" style="margin-right: 7px" alt="프로필 사진" width="30" height="30">
-                        <a class="a" href="{{ url_for('main.my_page', username=group.reservation[i].user.userID)}}">{{group.reservation[i].user.username}}</a>
+                        <a class="a" class="fw-bold" href="{{ url_for('main.my_page', username=group.reservation[i].user.userID)}}">{{group.reservation[i].user.username}}</a>
                       </li>
                     {% endfor %}
                   </ul>
@@ -184,7 +230,9 @@
               {% if join_status == 'already joined' %}
               <input class="btn btn-primary" type="submit" value="이미 가입되어 있습니다." disabled>
               {% elif join_status == 'not joined' %}
-              <input class="btn btn-primary" type="submit" value="가입신청">
+              <!-- <input class="btn btn-primary" type="submit" value="가입신청"> -->
+              <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#myModal" id="myInput">가입신청</button>
+
               {% elif join_status == 'owner' %}
               <input class="btn btn-primary" type="submit" value="이 그룹의 소유자 입니다." disabled>
               {% endif %}
@@ -203,4 +251,6 @@
 		</div>
 	</div>
 </div>
+
+
 {% endblock %}
