--- a/openseats/templates/canvas/canvas2.html
+++ b/openseats/templates/canvas/canvas2.html
@@ -3,6 +3,7 @@
 
 
 {% block content %}
+<link rel="stylesheet" href="{{ url_for('static', filename='/css/batchGUI.css') }}">
 
 <script src="https://unpkg.com/konva@9/konva.min.js"></script>
 
@@ -10,13 +11,46 @@
 <div class="container-fluid">
   <div class="row">
     <div id="side-space" class="col-md-2">
+      
+      <div class="side-space-menubar create">
+        <h4>객체 만들기</h4>
+        <select class="form-select mb-3" aria-label="object select example">
+          <option selected>모양 선택</option>
+          <option value="1">네모</option>
+          <option value="2">텍스트</option>
+        </select>
+        <div class="mb-3">
+          <label for="input-object-name" class="form-label">객체 이름</label>
+          <input type="text" class="form-control" id="input-object-name" placeholder="객체 이름 지정">
+        </div>
+        <div class="mb-3">
+          <label class="form-label">크기</label>
+          <input type="number" min="1" class="form-control mb-3" id="input-object-width" placeholder="너비">
+          <input type="number" min="1" class="form-control" id="input-object-height" placeholder="높이">
+        </div>
+        <div class="mb-3">
+          <label for="color-input" class="form-label">색 선택</label>
+          <input type="color" class="form-control form-control-color" id="color-input" value="#563d7c" title="Choose your color">
+        </div>
+        <button class="btn btn-primary" id="add-object-btn">객체 추가</button>
+      </div>
+      <hr>
+      <div class="side-space-menubar edit">
+        <h4>객체 수정</h4>
+      
+      </div>
+      
       <!-- Sidebar content here -->
       <!-- You can add your sidebar elements inside this div -->
     </div>
     <div id="work-space" class="col-md-10">
       <!-- Konva canvas container -->
-      <div id="konva-canvas"></div>
-      <script type="text/javascript" src="{{ url_for('static', filename='/js/batch_canvas2.js') }}"></script>
+      <div id="large-container">
+        <div id="konva-canvas"></div>
+        <script type="text/javascript" src="{{ url_for('static', filename='/js/batch_canvas2.js') }}"></script>
+        <script type="text/javascript" src="{{ url_for('static', filename='/js/test.js')}} "></script>
+      </div>
+
     </div>
   </div>
 </div>
