Batch object add funtion bug fix

--- a/openseats/static/css/batchGUI.css
+++ b/openseats/static/css/batchGUI.css
@@ -24,3 +24,10 @@
     margin: 10px;
     padding: 10px;
 }
+#konva-previewStage{
+    position: absolute;
+    top: 2px;
+    right: 2px;
+    border: 1px solid grey;
+    background-color: lightgrey;
+}
