--- a/openseats/templates/group/group_detail.html
+++ b/openseats/templates/group/group_detail.html
@@ -1,4 +1,3 @@
-
 {% extends 'basic/base.html' %}
 {% block title %}Openseats - {{group.name}}{% endblock %}
 
@@ -70,27 +69,28 @@
 <div class="modal fade" id="myModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
   <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
     <div class="modal-content">
+      <form method="POST" action="{{ url_for('group.join_request', group_id=group.id)}} ">
       <div class="modal-header">
         <h1 class="modal-title fs-5" id="exampleModalLabel">가입신청</h1>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
-        <form>
-           <div class="form-group">
-            <label for="recipient-name" class="col-form-label">제목:</label>
-            <input type="text" class="form-control" id="recipient-name">
+          {{ form.csrf_token }}
+          <div class="form-group">
+            <label for="message_title" class="col-form-label">제목:</label>
+            <input type="text" class="form-control" id="message_title" name="message_title">
           </div>
           <div class="mb-3">
-            <label for="message-text" class="col-form-label">가입신청 메세지:</label>
-            <textarea class="form-control" id="message-text" style="height: 100px;"></textarea>
+            <label for="message_content" class="col-form-label">가입신청 메세지:</label>
+            <input class="form-control" id="message_content" name="message_content" style="height: 100px;"></input>
           </div>
-        </form>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">닫기</button>
+          <button type="submit" class="btn btn-primary">가입신청</button>
+        </div>
+      </form>
       </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">닫기</button>
-        <button type="button" class="btn btn-primary">가입신청</button>
-      </div>
-    </div>
   </div>
 </div>
 
@@ -278,29 +278,35 @@
       <!-- Tab -->
       <ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
         <li class="nav-item" role="presentation">
-          <a class="nav-link active" id="pills-home-tab" data-bs-toggle="pill" data-bs-target="#pills-home" type="button" role="tab" aria-controls="pills-home" aria-selected="true">그룹 설명</a>
+          <a class="nav-link active" id="pills-description-tab" data-bs-toggle="pill" data-bs-target="#pills-description" type="button" role="tab" aria-controls="pills-description" aria-selected="true">그룹 설명</a>
         </li>
         <li class="nav-item" role="presentation">
-          <a class="nav-link" id="pills-profile-tab" data-bs-toggle="pill" data-bs-target="#pills-profile" type="button" role="tab" aria-controls="pills-profile" aria-selected="false">리뷰</a>
+          <a class="nav-link" id="pills-reviews-tab" data-bs-toggle="pill" data-bs-target="#pills-reviews" type="button" role="tab" aria-controls="pills-reviews" aria-selected="false">리뷰</a>
         </li>
         <li class="nav-item" role="presentation">
-          <a class="nav-link" id="pills-contact-tab" data-bs-toggle="pill" data-bs-target="#pills-contact" type="button" role="tab" aria-controls="pills-contact" aria-selected="false">커뮤니티</a>
+          <a class="nav-link" id="pills-community-tab" data-bs-toggle="pill" data-bs-target="#pills-community" type="button" role="tab" aria-controls="pills-community" aria-selected="false">커뮤니티</a>
         </li>
+        <!-- 그룹장일 경우 그룹관리 표시 -->
+        {% if join_status == 'owner' %}
+        <li class="nav-item" role="presentation">
+          <a class="nav-link" id="pills-manage-tab" data-bs-toggle="pill" data-bs-target="#pills-manage" type="button" role="tab" aria-controls="pills-manage" aria-selected="false">그룹관리</a>
+        </li>
+        {% endif %}
       </ul>
 
       <div class="tab-content border-top pt-2" style="font-size: 20px" id="pills-tabContent">
-        <div class="tab-pane fade show active" id="pills-home" role="tabpanel" aria-labelledby="pills-home-tab">
+        <div class="tab-pane fade show active" id="pills-description" role="tabpanel" aria-labelledby="pills-description-tab">
           <!-- First content -->
           <p>{{ group.description }}</p>
         </div>
-        <div class="tab-pane fade  " id="pills-profile" role="tabpanel" aria-labelledby="pills-profile-tab">
+        <div class="tab-pane fade  " id="pills-reviews" role="tabpanel" aria-labelledby="pills-reviews-tab">
           <!-- Second content -->
           <div class="review-intro my-3 mx-3">
             <h3 class="" style="font-size: 20px;">후기 ★4.96 (126개)</h3>
           </div>
           <div class="review d-flex flex-column mx-3 mt-2 pt-3">
             <div class="review-profile d-flex mb-1">
-              <img src="{{ url_for('feature.get_profile_image', user_id=group.reservation[0].user.id) }}" class="rounded-circle d-block" style="margin-right: 10px;" alt="프로필 사진" width="45" height="45">
+              <img src="{{ url_for('feature.get_profile_image', user_id=group.owner.id) }}" class="rounded-circle d-block" style="margin-right: 10px;" alt="프로필 사진" width="45" height="45">
               <div class="review-name d-flex justify-content-between" style="width: 100%;">
                 <div class="d-flex flex-column"><h5 class="mb-0">YoonSu Won</h5><p class="mb-0" style="font-size: 15px;">★4.5 | 2023-06-13</p></div>
                 <div>
@@ -317,8 +323,13 @@
 
 
         </div>
-        <div class="tab-pane fade" id="pills-contact" role="tabpanel" aria-labelledby="pills-contact-tab">...</div>
-        </div>
+        <div class="tab-pane fade" id="pills-community" role="tabpanel" aria-labelledby="pills-comminuty-tab">community</div>
+        <!-- 그룹장일 경우 관리탭 열람 가능 -->
+        {% if join_status == 'owner' %}
+        <div class="tab-pane fade" id="pills-manage" role="tabpanel" aria-labelledby="pills-manage-tab">manage</div>
+        {% endif %}
+      </div>
+    </div>
     <div class="col-md-5">
     </div>
   </div>
