batch GUI add preview

--- a/openseats/static/css/batchGUI.css
+++ b/openseats/static/css/batchGUI.css
@@ -31,3 +31,10 @@
     border: 1px solid grey;
     background-color: lightgrey;
 }
+#preview {
+    position: absolute;
+    top: 2px;
+    right: 2px;
+    border: 1px solid grey;
+    background-color: lightgrey;
+}
