--- a/openseats/templates/canvas/canvas2.html
+++ b/openseats/templates/canvas/canvas2.html
@@ -42,7 +42,7 @@
       <!-- 끝 -->
       <div class="side-space-menubar create">
         <h4 class="mb-3">객체 만들기</h4>
-        <div class="mb-3">
+        <div id="make-object" class="mb-3">
           <label for="input-object-name" class="form-label">객체 모양 선택<span class="text-danger">*</span></label>
           <select class="form-select" aria-label="object select">
             <option selected>모양 선택</option>
@@ -70,12 +70,11 @@
       <hr>
       <div class="side-space-menubar edit">
         <h4>객체 수정</h4>
-        <select class="form-select mb-3" aria-label=".form-select-lg example">
-          <option selected>선택된 객체</option>
-          <option value="1">One</option>
-          <option value="2">Two</option>
-          <option value="3">Three</option>
-        </select>
+        <div id="edit-object" class="mb-3">
+          <select id="select-object" class="form-select mb-3" aria-label=".form-select-lg example">
+            <option selected>선택된 객체</option>
+          </select>
+        </div>
       </div>
       
       <!-- Sidebar content here -->
@@ -84,11 +83,13 @@
     <div id="work-space" class="col-md-10">
       <!-- Konva canvas container -->
       <div id="large-container">
+        <img id="preview"/>
         <div id="konva-canvas"></div>
         <script type="module" src="{{ url_for('static', filename='/js/batch_canvas2.js') }}"></script>
-        
+
       </div>
       <div id="konva-previewStage"></div>
+
       
     </div>
   </div>
