--- a/openseats/templates/group/group_detail/group_detail.html
+++ b/openseats/templates/group/group_detail/group_detail.html
@@ -176,7 +176,7 @@
                 {% endif %}
             </div>
       {% else %}
-            <div style="background-color: #dedede; width: 650px;" class="carousel-img d-flex justify-content-center align-items-center mb-3">
+            <div style="background-color: #dedede; width: 600px;" class="carousel-img d-flex justify-content-center align-items-center mb-3">
               <div>이미지 없음</div>
             </div>
       {% endif %}
@@ -258,7 +258,7 @@
                 </div>
 
             <!-- <!- 예약하기 버튼 --> 
-            <form method="POST" action="{{ url_for('group.join', group_id=group.id, user_id=g.user.id) }}">
+            <div>
               {% if join_status == 'already joined' %}
               <input class="btn btn-primary" type="submit" value="이미 가입되어 있습니다." style="width: 100%" disabled>
               {% elif join_status == 'not joined' %}
@@ -268,7 +268,7 @@
               {% elif join_status == 'owner' %}
               <input class="btn btn-primary" type="submit" style="width: 100%" value="이 그룹의 소유자 입니다." disabled>
               {% endif %}
-            </form>
+            </div>
             </div>
     </div>
   </div>
@@ -289,7 +289,11 @@
         <!-- 그룹장일 경우 그룹관리 표시 -->
         {% if join_status == 'owner' %}
         <li class="nav-item" role="presentation">
-          <a class="nav-link" id="pills-manage-tab" data-bs-toggle="pill" data-bs-target="#pills-manage" type="button" role="tab" aria-controls="pills-manage" aria-selected="false">그룹관리</a>
+          <a class="nav-link" id="pills-manage-tab" data-bs-toggle="pill" data-bs-target="#pills-manage" type="button" role="tab" aria-controls="pills-manage" aria-selected="false">
+            그룹관리
+            <span class="badge bg-danger">17</span>
+          </a>
+
         </li>
         {% endif %}
       </ul>
@@ -320,14 +324,14 @@
               Hello my name is yunsuwon. I'm trying to tell you what is advantage of staying here.</p>
             </div>
           </div>
-
+          <!-- Second content end -->
 
         </div>
         <div class="tab-pane fade" id="pills-community" role="tabpanel" aria-labelledby="pills-comminuty-tab">community</div>
         <!-- 그룹장일 경우 관리탭 열람 가능 -->
         {% if join_status == 'owner' %}
         <div class="tab-pane fade" id="pills-manage" role="tabpanel" aria-labelledby="pills-manage-tab">
-          {% include 'group/group_detail_manage.html' %}
+          {% include 'group/group_detail/manage.html' %}
         </div>
         {% endif %}
       </div>
