--- a/openseats/templates/group/group_detail/group_detail.html
+++ b/openseats/templates/group/group_detail/group_detail.html
@@ -238,19 +238,19 @@
                 <!-- 그룹 멤버 collapse -->
                 <!-- toggle guider -->
                 <!-- https://stackoverflow.com/questions/16224636/twitter-bootstrap-collapse-change-display-of-toggle-button -->
-                <div class="collapse" id="collapse">
+                <div class="collapse align-middle" id="collapse">
                   {% for i in range(0, group.reservation|length) %}
                   {% if i == group.reservation|length - 1 %}
-                  <div class="d-flex border-bottom pb-2 mb-3">
+                  <div class="d-flex border-bottom pb-3 mb-3  align-items-center">
                   {% else %}
-                  <div class="d-flex pb-2 mb-1">
+                  <div class="d-flex pb-2 mb-1 ">
                   {% endif %}
-                    <div>
-                        <img src="{{ url_for('feature.get_profile_image', user_id=group.reservation[i].user.id) }}" class="rounded-circle d-block mb-2" style="margin-right: 3px" alt="프로필 사진" width="30" height="30">
+                    <div style="display: block; height: fit-content;">
+                        <img src="{{ url_for('feature.get_profile_image', user_id=group.reservation[i].user.id) }}" class="rounded-circle d-block" style="margin-right: 3px;" alt="프로필 사진" width="30" height="30">
                     </div>
-                    <div class="d-flex">
-                        <a class="a" class="fw-bold" href="{{ url_for('main.my_page', username=group.reservation[i].user.userID)}}">
-                          <h3 class="mx-2" style="font-size: 20px;">{{group.reservation[i].user.username}}</h3>
+                    <div class="" style="display: block; height: fit-content;">
+                        <a class="a" class="fw-bold"  href="{{ url_for('main.my_page', username=group.reservation[i].user.userID)}}">
+                          <h3 class="mx-2 mb-0" style="font-size: 17px;">{{group.reservation[i].user.username}}({{group.reservation[i].user.email}})</h3>
                         </a>
                     </div>
                   </div>
@@ -291,7 +291,7 @@
         <li class="nav-item" role="presentation">
           <a class="nav-link" id="pills-manage-tab" data-bs-toggle="pill" data-bs-target="#pills-manage" type="button" role="tab" aria-controls="pills-manage" aria-selected="false">
             그룹관리
-            <span class="badge bg-danger">17</span>
+            <span class="badge bg-danger">{{ group.join_request|length }}</span>
           </a>
 
         </li>
