--- a/openseats/static/css/batchGUI.css
+++ b/openseats/static/css/batchGUI.css
@@ -7,6 +7,7 @@
 #large-container {
     width: 3000px;
     height: 2000px;
+    position: relative;
     overflow: hidden;
 }
 
@@ -32,6 +33,8 @@
     background-color: lightgrey;
 }
 #preview {
+    max-width: 100%;
+    max-height: 100%;
     position: absolute;
     top: 2px;
     right: 2px;
