group_detail added buttons

--- a/openseats/templates/group/group_detail/group_detail.html
+++ b/openseats/templates/group/group_detail/group_detail.html
@@ -191,8 +191,11 @@
                     </div>
                     <div class="ml-3 w-100" style="margin-left: 10px;">
                       <span class="mb-2">이 그룹의 호스트</span>
-                      <!-- <span>{{ group.owner.email }}</span> -->
-                      <h4 class="mt-1"><a class="a" href="{{ url_for('main.my_page', username=group.owner.userID) }}">{{ group.owner.username }}</a></h4>
+                      <a class="a" href="{{ url_for('main.my_page', username=group.owner.userID) }}">
+                        <div class="d-flex align-items-center">
+                          <h4 class="mt-1">{{ group.owner.username }} </h4><p class="mb-0" style="display: block; height: fit-content;">({{ group.owner.email }})</p>
+                        </div>
+                      </a>
                     </div>
                 </div> 
                 <!-- 두번째, 좋아요 -->
