--- a/openseats/static/css/batchGUI.css
+++ b/openseats/static/css/batchGUI.css
@@ -4,13 +4,12 @@
     border-top: 1px solid #dee2e6; /* 세로 경계줄 스타일 */
     border-right: 1px solid #dee2e6; /* 세로 경계줄 스타일 */
 }
-#large-container {
-    width: 3000px;
-    height: 2000px;
-    position: relative;
-    overflow: hidden;
-}
 
+
+.side-space-menubar {
+    margin: 10px;
+    padding: 10px;
+}
 #work-space {
     background-color: #f8f9fa;
     height: 1000px;
@@ -20,24 +19,19 @@
     border-top: 1px solid #dee2e6; /* 세로 경계줄 스타일 */
     border-bottom: 1px solid #dee2e6; /* 세로 경계줄 스타일 */
 }
+#large-container {
+    width: 3000px;
+    height: 2000px;
+    position: relative;
+    overflow: hidden;
+    
+}
 
-.side-space-menubar {
-    margin: 10px;
-    padding: 10px;
-}
-#konva-previewStage{
-    position: absolute;
-    top: 2px;
-    right: 2px;
-    border: 1px solid grey;
-    background-color: lightgrey;
-}
 #preview {
-    max-width: 100%;
-    max-height: 100%;
-    position: absolute;
+    position: sticky;
     top: 2px;
-    right: 2px;
+    left: 2px;
+    
     border: 1px solid grey;
     background-color: lightgrey;
 }
