--- a/openseats/templates/canvas/canvas2.html
+++ b/openseats/templates/canvas/canvas2.html
@@ -40,6 +40,7 @@
         <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
       </div>
       <!-- 끝 -->
+      
       <div class="side-space-menubar create">
         <h4 class="mb-3">객체 만들기</h4>
         <div id="make-object" class="mb-3">
@@ -72,8 +73,9 @@
         <h4>객체 수정</h4>
         <div id="edit-object" class="mb-3">
           <select id="select-object" class="form-select mb-3" aria-label=".form-select-lg example">
-            <option selected>선택된 객체</option>
+            <option selected>객체를 선택하세요</option>
           </select>
+        <button class="btn btn-primary" id="select-all-object">모든 객체 선택</button>
         </div>
       </div>
       
