--- a/openseats/templates/group/group_detail/group_detail.html
+++ b/openseats/templates/group/group_detail/group_detail.html
@@ -330,7 +330,9 @@
           <!-- Second content end -->
 
         </div>
-        <div class="tab-pane fade" id="pills-community" role="tabpanel" aria-labelledby="pills-comminuty-tab">community</div>
+        <div class="tab-pane fade" id="pills-community" role="tabpanel" aria-labelledby="pills-comminuty-tab">
+          {% include 'group/group_detail/community.html' %}
+        </div>
         <!-- 그룹장일 경우 관리탭 열람 가능 -->
         {% if join_status == 'owner' %}
         <div class="tab-pane fade" id="pills-manage" role="tabpanel" aria-labelledby="pills-manage-tab">
